<resources>
    <string name="app_name">Gestion Culture</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ajouter">Ajouter</string>
    <string name="consulter">Consulter</string>
    <string name="exploitant_d_j_existant">Exploitant déjà existant</string>
    <string name="exploitant_non_existant">Exploitant non éxistant</string>
    <string name="ajouter_exploitation">Ajouter exploitation</string>
    <string name="nom">nom</string>
    <string name="prenom">prénom</string>
    <string name="adresse">adresse</string>
    <string name="ville">ville</string>
    <string name="code_postal">code postal</string>
    <string name="téléphone">téléphone</string>
    <string name="email">email</string>
    <string name="suivant">Suivant</string>
    <string name="ajouter_exploitant">Ajouter exploitant</string>
    <string name="ajouter_cahier_culture">Ajouter cahier culture</string>
    <string name="s_lectionner_exploitant_existant">Sélectionner exploitant existant</string>
    <string name="pas_dans_la_liste">Pas dans la liste ?</string>
    <string name="cr_er_un_exploitant">Créer un exploitant</string>
    <string name="cahier_culture">Cahier Culture</string>
    <string name="codeexploitation">codeExploitation</string>
    <string name="annee">Année</string>
    <string name="parcelle">Parcelle</string>
    <string name="espece">Espèce</string>
    <string name="surface">Surface</string>
    <string name="rendementprevu">Rendement Prévu</string>
    <string name="rendementrealise">Rendement Réalisé</string>
    <string name="s_lectionner_cahier_culture">Sélectionner Cahier Culture</string>
    <string name="s_lectionner_parcelle">Sélectionner Parcelle</string>
    <string name="modifier">Modifier</string>
</resources>