<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnSuivant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutExploitant">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextNomExploitant"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/editTextNomExploitant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenom" />

        <EditText
            android:id="@+id/editTextPrenomExploitant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse" />

        <EditText
            android:id="@+id/editTextAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ville" />

        <EditText
            android:id="@+id/editTextVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewCodePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_postal" />

        <EditText
            android:id="@+id/editTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/téléphone" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSuivantAjoutExploitant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suivant" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>