<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifParcelle">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="392dp"
        android:layout_height="433dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:id="@+id/titleModifParcelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/parcelle"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewEspeceModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espece" />

        <Spinner
            android:id="@+id/spinnerEspeceModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewSurfaceModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surface" />

        <EditText
            android:id="@+id/editTextSurfaceModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewRendementPrevuModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendementprevu" />

        <EditText
            android:id="@+id/editTextRendementPrevuModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewRendementRealiseModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendementrealise" />

        <EditText
            android:id="@+id/editTextRendementRealiseModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_modifParcelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modifier" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>