<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ajouter.AjoutParcelle">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="392dp"
        android:layout_height="433dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:id="@+id/titleAjoutParcelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/parcelle"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewEspece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espece" />

        <Spinner
            android:id="@+id/spinnerEspece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surface" />

        <EditText
            android:id="@+id/editTextSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewRendementPrevu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendementprevu" />

        <EditText
            android:id="@+id/editTextRendementPrevu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewRendementRealise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendementrealise" />

        <EditText
            android:id="@+id/editTextRendementRealise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnAjouterParcelleAjoutParcelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ajouter une autre Parcelle" />

        <Button
            android:id="@+id/btnEnregistrerParcelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enregistrer Cahier Culture" />


    </LinearLayout>

    <TextView
        android:id="@+id/textViewCodeExploitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/codeexploitation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAnnee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/annee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodeExploitation" />
</androidx.constraintlayout.widget.ConstraintLayout>