<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutExploitation">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="255dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse" />

        <EditText
            android:id="@+id/editTextExploitationAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/labelVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ville" />

        <EditText
            android:id="@+id/editTextExploitationVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/labelCodePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_postal" />

        <EditText
            android:id="@+id/editTextExploitationCodePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSuivantAjoutExploitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suivant" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>